--- a/public/css/user-styles-index.css
+++ b/public/css/user-styles-index.css
@@ -6,80 +6,12 @@ body {
     background-color: #000000;
 }
 
-.header {
-    background-color: rgba(113, 113, 113, 0.5);
-    display: flex;
-    justify-content: space-around;
-    height: 85px;
-    align-items: center;
-    color: rgb(255, 255, 255);
-    font-family: sans-serif;
-    text-transform: uppercase;
-    padding-top: 5px;
-    padding-bottom: 5px;
-}
-
-.navbar-brand img {
-    height: 130px;
-    width: 130px;
-    padding-top: 30px;
-}
-
-.header-item {
-    display: inline-flex;
-    margin-left: 25px;
-    margin-right: 25px;
-    cursor: pointer;
-    transition: background-color 0.5s;
-    height: 25px;
-    width: 95px;
-    align-items: center;
-    justify-content: center;
-    border-bottom: solid 1.5px rgba(69, 29, 29, 0);
-    border-top: solid 1.5px rgba(169, 29, 29, 0);
-}
-
-.header-item:hover {
-    border-bottom: solid 1.5px;
-    border-top: solid 1.5px;
-    background-color: #2712c4;
-}
-.header-items {
-    width: auto;
-    display: inline-flex;
-    justify-content: center;
-}
-
-.header-logo {
-    display: inline-flex;
-    width: 100px;
-}
-
-.header-register {
-    display: inline-flex;
-    width: 100px;
-}
-
-.header-register-btn {
-    padding: 8px 30px;
-    background-image: linear-gradient(to right, red, blue);
-    color: #ffffff;
-    border-radius: 45px;
-    transition: all 0.3s;
-    border: none;
-    white-space: nowrap;
-    font-family: sans-serif;
-    text-transform: uppercase;
-    font-size: inherit;
-}
-
-.header-register-btn:hover {
-    background-image: linear-gradient(to left, red, blue);
-    cursor: pointer;
+body::-webkit-scrollbar {
+    display: none;
 }
 
 .content {
-    height: 1200px;
+    height: 600px;
 }
 
 /* ------------------------------------timeline---------------------------- */
@@ -92,10 +24,10 @@ body {
     z-index: 1;
 }
 
-.timeline {
-    /* container for timeline */
+/* .timeline {
+    container for timeline
     background: #2e364a;
-}
+} */
 
 .timeline-frame {
     position: relative;
@@ -319,8 +251,9 @@ body {
 
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
-    background-color: var(--first-color);
+    /* background-color: var(--first-color); */
     color: var(--black-color);
+    color: wheat;
 }
 
 .merch img {
@@ -611,7 +544,7 @@ body {
     justify-content: center;
     flex-wrap: wrap;
     margin-top: 10px;
-    border: solid red;
+    /* border: solid red; */
     width: 100%;
 }
 
@@ -626,7 +559,7 @@ body {
     margin-right: 50px;
     margin-bottom: 20px;
     margin-top: 20px;
-    border: solid rgb(255, 0, 0);
+    /* border: solid rgb(255, 0, 0); */
     text-align: center;
 }
 
@@ -669,12 +602,104 @@ body {
 
 /* -------------------------------------- */
 
-.AIESEC {
-    color: #ffee00;
+/* =================================== */
+
+.footer-card {
+    width: fit-content;
+    height: fit-content;
+    background-color: rgb(238, 238, 238);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 25px 25px;
+    gap: 20px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.055);
+}
+
+/* for all social containers*/
+.socialContainer {
+    width: 52px;
+    height: 52px;
+    background-color: rgb(44, 44, 44);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    transition-duration: 0.3s;
+}
+/* instagram*/
+.containerOne:hover {
+    background-color: #d62976;
+    transition-duration: 0.3s;
+}
+/* twitter*/
+.containerTwo:hover {
+    background-color: #00acee;
+    transition-duration: 0.3s;
+}
+/* linkdin*/
+.containerThree:hover {
+    background-color: #0072b1;
+    transition-duration: 0.3s;
+}
+/* Whatsapp*/
+.containerFour:hover {
+    background-color: #128c7e;
+    transition-duration: 0.3s;
+}
+
+.socialContainer:active {
+    transform: scale(0.9);
+    transition-duration: 0.3s;
+}
+
+.socialSvg {
+    width: 17px;
+}
+
+.socialSvg path {
+    fill: rgb(255, 255, 255);
+}
+
+.socialContainer:hover .socialSvg {
+    animation: slide-in-top 0.3s both;
+}
+
+@keyframes slide-in-top {
+    0% {
+        transform: translateY(-50px);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+.footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.aa-logo {
+    color: white;
+    width: 400px;
+}
+
+.aa-social {
+    align-self: center;
+    width: 330px;
+    margin: 20px;
+}
+
+.title-text {
     text-align: center;
-    text-transform: uppercase;
-    font-family: sans-serif;
-    font-size: 40px;
-    font-weight: bold;
-    height: 300px;
+    font-size: larger;
+    color: #fbc403;
+    font-family: Roboto Slab;
+    font-weight: 500;
+    font-size: 4.5vw;
+    margin: 20px;
 }
