--- a/views/data.hbs
+++ b/views/data.hbs
@@ -11,10 +11,10 @@
         Total registrations: {{count}}
         {{#each data}}
         <div class="user-card">
-            <div class="user-id">[{{@index}}] ID: {{_id}}</div>
+            <div class="user-id">[{{@index}}] Database ID: {{id}}</div>
             <table>
-            <tr><td>First name:</td><td>{{fname}}</td></tr>
-            <tr><td>Last name:</td><td>{{lname}}</td></tr>
+            <tr><td>First name:</td><td>{{firstName}}</td></tr>
+            <tr><td>Last name:</td><td>{{lastName}}</td></tr>
             <tr><td>Email:</td><td>{{email}}</td></tr>
             <tr><td>Category:</td><td>{{category}}</td></tr>
             <tr><td>Institute:</td><td>{{institute}}</td></tr>
