--- a/public/css/user-styles-index.css
+++ b/public/css/user-styles-index.css
@@ -6,12 +6,180 @@ body {
     background-color: #000000;
 }
 
-body::-webkit-scrollbar {
+/* body::-webkit-scrollbar {
     display: none;
+} */
+
+.hero-section {
+    height: 600px;
+    background-image: url("../img/back.png");
+    background-position: center;
+    background-size: cover;
 }
 
-.content {
-    height: 600px;
+.glitch-text {
+    position: absolute;
+    color: #f0eeee;
+    font-weight: 700;
+    font-size: 3vw;
+    transform: scale(2);
+    padding: 30px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    top: 100px;
+}
+
+.glitch-text:before,
+.glitch-text:after {
+    padding: 30px;
+    color: fff;
+    content: attr(data-text);
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+}
+
+.glitch-text:before {
+    left: 0px;
+    text-shadow: -2px 0 red;
+    animation: glitch-1 2s linear infinite reverse;
+}
+
+.glitch-text:after {
+    left: -3px;
+    text-shadow: -2px 0 blue;
+    animation: glitch-2 2s linear infinite reverse;
+}
+
+@keyframes glitch-1 {
+    0% {
+        clip: rect(132px, auto, 101px, 30px);
+    }
+    5% {
+        clip: rect(17px, auto, 94px, 30px);
+    }
+    10% {
+        clip: rect(40px, auto, 66px, 30px);
+    }
+    15% {
+        clip: rect(87px, auto, 82px, 30px);
+    }
+    20% {
+        clip: rect(137px, auto, 61px, 30px);
+    }
+    25% {
+        clip: rect(34px, auto, 14px, 30px);
+    }
+    30% {
+        clip: rect(133px, auto, 74px, 30px);
+    }
+    35% {
+        clip: rect(76px, auto, 107px, 30px);
+    }
+    40% {
+        clip: rect(59px, auto, 130px, 30px);
+    }
+    45% {
+        clip: rect(29px, auto, 84px, 30px);
+    }
+    50% {
+        clip: rect(22px, auto, 67px, 30px);
+    }
+    55% {
+        clip: rect(67px, auto, 62px, 30px);
+    }
+    60% {
+        clip: rect(10px, auto, 105px, 30px);
+    }
+    65% {
+        clip: rect(78px, auto, 115px, 30px);
+    }
+    70% {
+        clip: rect(105px, auto, 13px, 30px);
+    }
+    75% {
+        clip: rect(15px, auto, 75px, 30px);
+    }
+    80% {
+        clip: rect(66px, auto, 39px, 30px);
+    }
+    85% {
+        clip: rect(133px, auto, 73px, 30px);
+    }
+    90% {
+        clip: rect(36px, auto, 128px, 30px);
+    }
+    95% {
+        clip: rect(68px, auto, 103px, 30px);
+    }
+    100% {
+        clip: rect(14px, auto, 100px, 30px);
+    }
+}
+@keyframes glitch-2 {
+    0% {
+        clip: rect(129px, auto, 36px, 30px);
+    }
+    5% {
+        clip: rect(36px, auto, 4px, 30px);
+    }
+    10% {
+        clip: rect(85px, auto, 66px, 30px);
+    }
+    15% {
+        clip: rect(91px, auto, 91px, 30px);
+    }
+    20% {
+        clip: rect(148px, auto, 138px, 30px);
+    }
+    25% {
+        clip: rect(38px, auto, 122px, 30px);
+    }
+    30% {
+        clip: rect(69px, auto, 54px, 30px);
+    }
+    35% {
+        clip: rect(98px, auto, 71px, 30px);
+    }
+    40% {
+        clip: rect(146px, auto, 34px, 30px);
+    }
+    45% {
+        clip: rect(134px, auto, 43px, 30px);
+    }
+    50% {
+        clip: rect(102px, auto, 80px, 30px);
+    }
+    55% {
+        clip: rect(119px, auto, 44px, 30px);
+    }
+    60% {
+        clip: rect(106px, auto, 99px, 30px);
+    }
+    65% {
+        clip: rect(141px, auto, 74px, 30px);
+    }
+    70% {
+        clip: rect(20px, auto, 78px, 30px);
+    }
+    75% {
+        clip: rect(133px, auto, 79px, 30px);
+    }
+    80% {
+        clip: rect(78px, auto, 52px, 30px);
+    }
+    85% {
+        clip: rect(35px, auto, 39px, 30px);
+    }
+    90% {
+        clip: rect(67px, auto, 70px, 30px);
+    }
+    95% {
+        clip: rect(71px, auto, 103px, 30px);
+    }
+    100% {
+        clip: rect(83px, auto, 40px, 30px);
+    }
 }
 
 /* ------------------------------------timeline---------------------------- */
@@ -38,40 +206,8 @@ body::-webkit-scrollbar {
     padding: 10px 50px;
     position: relative;
     width: 50%;
+
     /* background: rgba(0, 0, 0, 0.3); */
-
-    animation: movedown 1s linear forwards;
-    opacity: 0;
-}
-
-@keyframes movedown {
-    0% {
-        opacity: 1;
-        transform: translateY(-30px);
-    }
-    100% {
-        opacity: 1;
-        transform: translateY(0px);
-    }
-}
-
-/* .container-for-timeline:nth-child(1) {
-    animation-delay: 0s;
-} */
-.container-for-timeline:nth-child(2) {
-    animation-delay: 1s;
-}
-.container-for-timeline:nth-child(3) {
-    animation-delay: 2s;
-}
-.container-for-timeline:nth-child(4) {
-    animation-delay: 3s;
-}
-.container-for-timeline:nth-child(5) {
-    animation-delay: 4s;
-}
-.container-for-timeline:nth-child(6) {
-    animation-delay: 5s;
 }
 
 .text-box {
@@ -80,6 +216,9 @@ body::-webkit-scrollbar {
     position: relative;
     border-radius: 6px;
     font-size: 15px;
+
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
 }
 
 .left-container {
@@ -96,32 +235,20 @@ body::-webkit-scrollbar {
     right: -20px;
     top: 32px;
     z-index: 10;
+    opacity: 1;
 }
 
 .right-container img {
     left: -20px;
 }
-
-.timeline-frame::after {
-    content: "";
-    position: absolute;
-    width: 6px;
-    height: 100%;
-    background: #fff;
-    top: 0;
-    left: 50%;
-    margin-left: -3px;
-    z-index: -1;
-    animation: moveline 6s linear forwards;
+.timeline {
+    position: relative;
 }
-
-@keyframes moveline {
-    0% {
-        height: 0;
-    }
-    100% {
-        height: 100%;
-    }
+.timeline-line {
+    position: absolute;
+    left: calc(50% - 3px);
+    width: 6px;
+    background-color: white;
 }
 
 .text-box h2 {
@@ -158,6 +285,9 @@ body::-webkit-scrollbar {
 }
 
 @media screen and (max-width: 600px) {
+    .timeline-line {
+        left: 27px;
+    }
     .timeline-frame {
         margin: 50px auto;
     }
@@ -229,6 +359,13 @@ body::-webkit-scrollbar {
     /*========== z index ==========*/
     --z-tooltip: 10;
     --z-fixed: 100;
+
+    /*--------------------------------------------------*/
+    --main-col-1: #ffffff;
+    --main-col-2: #35123d;
+    --main-col-3: #1e0449;
+    --main-col-4: #130e32;
+    --main-col-5: #000000;
 }
 
 /* Responsive typography */
