opacity aded to image

--- a/views/index.html
+++ b/views/index.html
@@ -42,9 +42,12 @@
         <div class="timeline" id="timeline">
             <div class="timeline-line" id="timeline-line"></div>
             <div class="timeline-frame">
-                <div class="container-for-timeline left-container">
+                <div
+                    class="container-for-timeline left-container"
+                    id="timeline-card-1"
+                >
                     <img src="../public/img/google.png" id="timeline-img-1" />
-                    <div class="text-box" id="timeline-card-1">
+                    <div class="text-box">
                         <h2>Lorem ipsum</h2>
                         <small>Lorem ipsum</small>
                         <p>
@@ -56,9 +59,12 @@
                         <span class="left-container-arrow"></span>
                     </div>
                 </div>
-                <div class="container-for-timeline right-container">
+                <div
+                    class="container-for-timeline right-container"
+                    id="timeline-card-2"
+                >
                     <img src="../public/img/amazon.png" id="timeline-img-2" />
-                    <div class="text-box" id="timeline-card-2">
+                    <div class="text-box">
                         <h2>Lorem ipsum</h2>
                         <small>Lorem ipsum</small>
                         <p>
@@ -70,9 +76,12 @@
                         <span class="right-container-arrow"></span>
                     </div>
                 </div>
-                <div class="container-for-timeline left-container">
+                <div
+                    class="container-for-timeline left-container"
+                    id="timeline-card-3"
+                >
                     <img src="../public/img/toyota.png" id="timeline-img-3" />
-                    <div class="text-box" id="timeline-card-3">
+                    <div class="text-box">
                         <h2>Lorem ipsum</h2>
                         <small>Lorem ipsum</small>
                         <p>
@@ -84,9 +93,12 @@
                         <span class="left-container-arrow"></span>
                     </div>
                 </div>
-                <div class="container-for-timeline right-container">
+                <div
+                    class="container-for-timeline right-container"
+                    id="timeline-card-4"
+                >
                     <img src="../public/img/tesla.png" id="timeline-img-4" />
-                    <div class="text-box" id="timeline-card-4">
+                    <div class="text-box">
                         <h2>Lorem ipsum</h2>
                         <small>Lorem ipsum</small>
                         <p>
@@ -98,9 +110,12 @@
                         <span class="right-container-arrow"></span>
                     </div>
                 </div>
-                <div class="container-for-timeline left-container">
+                <div
+                    class="container-for-timeline left-container"
+                    id="timeline-card-5"
+                >
                     <img src="../public/img/flipkart.png" id="timeline-img-5" />
-                    <div class="text-box" id="timeline-card-5">
+                    <div class="text-box">
                         <h2>Lorem ipsum</h2>
                         <small>Lorem ipsum</small>
                         <p>
@@ -112,9 +127,12 @@
                         <span class="left-container-arrow"></span>
                     </div>
                 </div>
-                <div class="container-for-timeline right-container">
+                <div
+                    class="container-for-timeline right-container"
+                    id="timeline-card-6"
+                >
                     <img src="../public/img/youtube.png" id="timeline-img-6" />
-                    <div class="text-box" id="timeline-card-6">
+                    <div class="text-box">
                         <h2>Lorem ipsum</h2>
                         <small>Lorem ipsum</small>
                         <p>
